@@ -55,14 +55,14 @@ func init() {
 		msfraggerCmd.Flags().IntVarP(&m.MSFragger.PrecursorMassUnits, "precursor_mass_units", "", 1, "0=Daltons, 1=ppm")
 		msfraggerCmd.Flags().IntVarP(&m.MSFragger.PrecursorTrueTolerance, "precursor_true_tolerance", "", 20, "")
 		msfraggerCmd.Flags().IntVarP(&m.MSFragger.PrecursorTrueUnits, "precursor_true_units", "", 1, "0=Daltons, 1=ppm")
-		msfraggerCmd.Flags().IntVarP(&m.MSFragger.FragmentMassTolerance, "fragment_mass_tolerance", "", 20, "")
+		msfraggerCmd.Flags().Float64VarP(&m.MSFragger.FragmentMassTolerance, "fragment_mass_tolerance", "", 20, "")
 		msfraggerCmd.Flags().IntVarP(&m.MSFragger.FragmentMassUnits, "fragment_mass_units", "", 1, "")
 		msfraggerCmd.Flags().IntVarP(&m.MSFragger.CalibrateMass, "calibrate_mass", "", 0, "0=Off, 1=On, 2=On and find optimal parameters")
-		msfraggerCmd.Flags().IntVarP(&m.MSFragger.IsotopeError, "isotope_error", "", 0, "0=off, -1/0/1/2/3 (standard C13 error)")
+		msfraggerCmd.Flags().StringVarP(&m.MSFragger.IsotopeError, "isotope_error", "", "0", "0=off, -1/0/1/2/3 (standard C13 error)")
 		msfraggerCmd.Flags().IntVarP(&m.MSFragger.MassOffsets, "mass_offsets", "", 0, "allow for additional precursor mass window shifts")
-		msfraggerCmd.Flags().IntVarP(&m.MSFragger.ShiftedIons, "shifted_ions", "", 0, "")
+		msfraggerCmd.Flags().IntVarP(&m.MSFragger.LocalizeDeltaMass, "localize_delta_mass", "", 0, "")
 		msfraggerCmd.Flags().StringVarP(&m.MSFragger.PrecursorMassMode, "precursor_mass_mode", "", "selected", "")
-		//msfraggerCmd.Flags().StringVarP(&m.MSFragger.ShiftedIonsExcludeRanges, "shifted_ions_exclude_ranges", "", "(-1.5,3.5)", "")
+		//msfraggerCmd.Flags().StringVarP(&m.MSFragger.DeltaMassExcludeRanges, "delta_mass_exclude_ranges", "", "(-1.5,3.5)", "")
 		msfraggerCmd.Flags().StringVarP(&m.MSFragger.FragmentIonSeries, "fragment_ion_series", "", "b,y", "")
 		msfraggerCmd.Flags().StringVarP(&m.MSFragger.SearchEnzymeName, "search_enzyme_name", "", "Trypsin", "")
 		msfraggerCmd.Flags().StringVarP(&m.MSFragger.SearchEnzymeCutafter, "search_enzyme_cutafter", "", "KR", "")
@@ -70,8 +70,8 @@ func init() {
 		msfraggerCmd.Flags().IntVarP(&m.MSFragger.NumEnzymeTermini, "num_enzyme_termini", "", 2, "2 for enzymatic, 1 for semi-enzymatic, 0 for nonspecific digestion")
 		msfraggerCmd.Flags().IntVarP(&m.MSFragger.AllowedMissedCleavage, "allowed_missed_cleavage", "", 1, "maximum value is 5")
 		msfraggerCmd.Flags().IntVarP(&m.MSFragger.ClipNTermM, "clip_nTerm_M", "", 1, "")
-		msfraggerCmd.Flags().StringVarP(&m.MSFragger.VariableMod01, "variable_mod_01", "", "15.99490_M", "")
-		msfraggerCmd.Flags().StringVarP(&m.MSFragger.VariableMod02, "variable_mod_02", "", "42.01060_[^", "")
+		msfraggerCmd.Flags().StringVarP(&m.MSFragger.VariableMod01, "variable_mod_01", "", "15.99490 M", "")
+		msfraggerCmd.Flags().StringVarP(&m.MSFragger.VariableMod02, "variable_mod_02", "", "42.01060 [^", "")
 		msfraggerCmd.Flags().StringVarP(&m.MSFragger.VariableMod03, "variable_mod_03", "", "", "")
 		msfraggerCmd.Flags().StringVarP(&m.MSFragger.VariableMod04, "variable_mod_04", "", "", "")
 		msfraggerCmd.Flags().IntVarP(&m.MSFragger.AllowMultipleVariableModsOnResidue, "allow_multiple_variable_mods_on_residue", "", 1, "static mods are not considered")
