@@ -49,27 +49,27 @@ msfragger:
   param: ''                                    # MSFragger parameter file
   raw: mzML                                    # spectra format
   num_ threads: 0                              # 0=poll CPU to set num threads; else specify num threads directly (max 64)
-  database_name: ''
-  precursor_mass_lower: -20
-  precursor_mass_upper: 20
+  database_name: ''                            # path to the protein database file in FASTA format
+  precursor_mass_lower: -20                    # lower bound of the precursor mass window
+  precursor_mass_upper: 20                     # upper bound of the precursor mass window
   precursor_mass_units: 1                      # 0=Daltons, 1=ppm
-  precursor_true_tolerance: 20
+  precursor_true_tolerance: 20                 # true precursor mass tolerance (window is +/- this value)
   precursor_true_units: 1                      # 0=Daltons, 1=ppm
-  fragment_mass_tolerance: 20
-  fragment_mass_units: 1
+  fragment_mass_tolerance: 20                  # fragment mass tolerance (window is +/- this value)
+  fragment_mass_units: 1                       # fragment mass tolerance units (0 for Da, 1 for ppm)
   calibrate_mass: 0                            # 0=Off, 1=On, 2=On and find optimal parameters
-  isotope_error: 0                             # 0=off, -1/0/1/2/3 (standard C13 error)
+  isotope_error: ''                            # 0=off, -1/0/1/2/3 (standard C13 error)
   mass_offsets: 0                              # allow for additional precursor mass window shifts. Multiplexed with isotope_error. mass_offsets = 0/79.966 can be used as a restricted ‘open’ search that looks for unmodified and phosphorylated peptides (on any residue)
   precursor_mass_mode: selected                # selected or isolated
-  shifted_ions: 0
-  shifted_ions_exclude_ranges: (-1.5,3.5)
-  fragment_ion_series: b,y
-  search_enzyme_name: Trypsin
-  search_enzyme_cutafter: KR
-  search_enzyme_butnotafter: P
+  localize_delta_mass: 0                       # this allows shifted fragment ions - fragment ions with mass increased by the calculated mass difference, to be included in scoring
+  delta_mass_exclude_ranges: (-1.5,3.5)        # exclude mass range for shifted ions searching
+  fragment_ion_series: b,y                     # ion series used in search
+  search_enzyme_name: Trypsin                  # name of enzyme to be written to the pepXML file
+  search_enzyme_cutafter: KR                   # residues after which the enzyme cuts
+  search_enzyme_butnotafter: P                 # residues that the enzyme will not cut before
   num_enzyme_termini: 2                        # 2 for enzymatic, 1 for semi-enzymatic, 0 for nonspecific digestion
   allowed_missed_cleavage: 1                   # maximum value is 5
-  clip_nTerm_M: 1
+  clip_nTerm_M: 1                              # specifies the trimming of a protein N-terminal methionine as a variable modification (0 or 1)
   variable_mod_01: 15.99490_M                  # variable modifications
   variable_mod_02: 42.01060_[^                 # variable modifications
   variable_mod_03: ''                          # variable modifications
@@ -77,53 +77,53 @@ msfragger:
   allow_multiple_variable_mods_on_residue: 1   # static mods are not considered
   max_variable_mods_per_mod: 3                 # maximum of 5
   max_variable_mods_combinations: 5000         # maximum of 65534, limits number of modified peptides generated from sequence
-  output_file_extension: pepXML
-  output_format: pepXML
-  output_report_topN: 1
-  output_max_expect: 50
+  output_file_extension: pepXML                # file extension of output files
+  output_format: pepXML                        # file format of output files (pepXML or tsv)
+  output_report_topN: 1                        # reports top N PSMs per input spectrum
+  output_max_expect: 50                        # suppresses reporting of PSM if top hit has expectation greater than this threshold
   report_alternative_proteins: 0               # 0=no, 1=yes
-  precursor_charge: '1 4'
+  precursor_charge: 1 4                        # assume range of potential precursor charge states. Only relevant when override_charge is set to 1
   override_charge: 0                           # 0=no, 1=yes to override existing precursor charge states with precursor_charge parameter
-  digest_min_length: 7 
-  digest_max_length: 50 
-  digest_mass_range: '500.0 5000.0'
-  max_fragment_charge: 2
+  digest_min_length: 7                         # minimum length of peptides to be generated during in-silico digestion
+  digest_max_length: 50                        # maximum length of peptides to be generated during in-silico digestion
+  digest_mass_range: 500.0 5000.0              # mass range of peptides to be generated during in-silico digestion in Daltons
+  max_fragment_charge: 2                       # maximum charge state for theoretical fragments to match (1-4)
   track_zero_topN: 0                           # in addition to topN results, keep track of top results in zero bin
   zero_bin_accept_expect: 0                    # boost top zero bin entry to top if it has expect under 0.01 - set to 0 to disable
   zero_bin_mult_expect: 1                      # disabled if above passes - multiply expect of zero bin for ordering purposes (does not affect reported expect)
-  add_topN_complementary: 0
+  add_topN_complementary: 0                    # inserts complementary ions corresponding to the top N most intense fragments in each experimental spectra
   minimum_peaks: 15                            # required minimum number of peaks in spectrum to search (default 10)
-  use_topN_peaks: 100
-  min_fragments_modelling: 2
-  min_matched_fragments: 4
-  minimum_ratio: 0.01
-  clear_mz_range: '0.0 0.0'                    # for iTRAQ/TMT type data; will clear out all peaks in the specified m/z range
-  add_C_cysteine: 0.000000                     # fixed modifications 
-  add_Cterm_peptide: 0.000000                  # fixed modifications
-  add_Cterm_protein: 0.000000                  # fixed modifications
-  add_D_aspartic_acid: 0.000000                # fixed modifications
-  add_E_glutamic_acid: 0.000000                # fixed modifications
-  add_F_phenylalanine: 0.000000                # fixed modifications
-  add_G_glycine: 0.000000                      # fixed modifications
-  add_H_histidine: 0.000000                    # fixed modifications
-  add_I_isoleucine: 0.000000                   # fixed modifications
-  add_K_lysine: 0.000000                       # fixed modifications
-  add_L_leucine: 0.000000                      # fixed modifications
-  add_M_methionine: 0.000000                   # fixed modifications
-  add_N_asparagine: 0.000000                   # fixed modifications
-  add_Nterm_peptide: 0.000000                  # fixed modifications
-  add_Nterm_protein: 0.000000                  # fixed modifications
-  add_P_proline: 0.000000                      # fixed modifications
-  add_Q_glutamine: 0.000000                    # fixed modifications
-  add_R_arginine: 0.000000                     # fixed modifications
-  add_S_serine: 0.000000                       # fixed modifications
-  add_T_threonine: 0.000000                    # fixed modifications
-  add_V_valine: 0.000000                       # fixed modifications
-  add_W_tryptophan: 0.000000                   # fixed modifications
-  add_Y_tyrosine: 0.000000                     # fixed modifications
+  use_topN_peaks: 100                          # pre-process experimental spectrum to only use top N peaks
+  min_fragments_modelling: 2                   # minimum number of matched peaks in PSM for inclusion in statistical modeling
+  min_matched_fragments: 4                     # minimum number of matched peaks for PSM to be reported
+  minimum_ratio: 0.01                          # filters out all peaks in experimental spectrum less intense than this multiple of the base peak intensity
+  clear_mz_range: 0.0 0.0                      # for iTRAQ/TMT type data; will clear out all peaks in the specified m/z range
+  add_C_cysteine: 0.000000                     # cysteine fixed modifications 
+  add_Cterm_peptide: 0.000000                  # c-term peptide fixed modifications
+  add_Cterm_protein: 0.000000                  # c-term protein fixed modifications
+  add_D_aspartic_acid: 0.000000                # aspartic acid fixed modifications
+  add_E_glutamic_acid: 0.000000                # glutamic acid fixed modifications
+  add_F_phenylalanine: 0.000000                # phenylalanine fixed modifications
+  add_G_glycine: 0.000000                      # glycine fixed modifications
+  add_H_histidine: 0.000000                    # histidine fixed modifications
+  add_I_isoleucine: 0.000000                   # isoleucine fixed modifications
+  add_K_lysine: 0.000000                       # lysine fixed modifications
+  add_L_leucine: 0.000000                      # leucine fixed modifications
+  add_M_methionine: 0.000000                   # methionine fixed modifications
+  add_N_asparagine: 0.000000                   # asparagine fixed modifications
+  add_Nterm_peptide: 0.000000                  # n-term peptide fixed modifications
+  add_Nterm_protein: 0.000000                  # n-term protein fixed modifications
+  add_P_proline: 0.000000                      # proline fixed modifications
+  add_Q_glutamine: 0.000000                    # glutamine fixed modifications
+  add_R_arginine: 0.000000                     # arginine fixed modifications
+  add_S_serine: 0.000000                       # serine fixed modifications
+  add_T_threonine: 0.000000                    # threonine fixed modifications
+  add_V_valine: 0.000000                       # valine fixed modifications
+  add_W_tryptophan: 0.000000                   # tryptophan fixed modifications
+  add_Y_tyrosine: 0.000000                     # tyrosine fixed modifications
 
 peptideprophet:
-  extension: pepxml                            # pepXML file extension
+  extension: pepXML                            # pepXML file extension
   accmass: false                               # use Accurate Mass model binning
   database: ''                                 # path to the database
   decoy: rev_                                  # semi-supervised mode, protein name prefix to identify Decoy entries
@@ -221,6 +221,7 @@ freequant:
   peakTimeWindow: 0.4                          # specify the time windows for the peak (minute) (default 0.4)
   retentionTimeWindow: 3                       # specify the retention time window for xic (minute) (default 3)
   tolerance: 10                                # m/z tolerance in ppm (default 10)
+  isolated: false                              # use the isolated ion instead of the selected ion for quantification
 
 labelquant:
   annotation: ''                               # annotation file with custom names for the TMT channels
